# Hackathon

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/v1/: auth.py  router.py
app/core/: exceptions.py  security.py
app/database/: connection.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py
